[TTDB-1041] Implements endpoints `/operation` and `/operation/{internal_operation_id}` - Added option `--save-dicts` for saving all input and output dicts to operation run dir - Replaced `os.path` to `pathlib.Path` - Replaced hardcoded `/tmp` path to `tempfile.gettempdir()` - Removed dependencies from pg_anon file structure for dictionaries and dumps
